WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
112046
CoreIPC crash in NetworkProcess after WebProcess crash
https://bugs.webkit.org/show_bug.cgi?id=112046
Summary
CoreIPC crash in NetworkProcess after WebProcess crash
Brady Eidson
Reported
2013-03-11 11:56:54 PDT
Crash in NetworkProcess after WebProcess crash When WebProcess crashes we null out the NetworkConnectionToWebProcess, so we later crash sending IPC messages as network callbacks filter in. We shouldn't null it out. <
rdar://problem/13124146
>
Attachments
Patch
(1.45 KB, patch)
2013-03-11 12:00 PDT
,
Brady Eidson
ap
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Brady Eidson
Comment 1
2013-03-11 12:00:26 PDT
Created
attachment 192523
[details]
Patch
Brady Eidson
Comment 2
2013-03-11 12:27:19 PDT
http://trac.webkit.org/changeset/145380
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug