CoreIPC crash in NetworkProcess after WebProcess crash. <rdar://problem/13124146> and https://bugs.webkit.org/show_bug.cgi?id=112046

Reviewed by Alexey Proskuryakov.

* NetworkProcess/SchedulableLoader.cpp:
(WebKit::SchedulableLoader::connectionToWebProcessDidClose): Don't null out the connection backpointer on crash.

Canonical link: https://commits.webkit.org/130337@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@145380 268f45cc-cd09-0410-ab3c-d52691b4dbfc